Fixed Card Overflow, added font

--- a/style.css
+++ b/style.css
@@ -2,15 +2,22 @@
 /* lavendar : cfcfea */
 /* green: f0ffce */
 
-
+@font-face {
+    font-family: 'SUSE';
+    src: url(./SUSE/SUSE-VariableFont_wght.ttf) format('truetype');
+}
 
 :root {
     --purple: #adadd2;
     --green: #a9e7b9;
     --grey: #CCCCCC;
-    --shadow-color: 5px 5px 5px #d6d6d6;
+    --shadow-color: 5px 5px 5px #adadd27f;
 }
 * {
+}
+
+body {
+    font-family: 'SUSE', sans-serif;
 }
 
 .container {
@@ -97,7 +104,7 @@
 
 .trending, .announcements {
     border-style: solid;
-    border-width: 3px;
+    border-width: 4px;
     border-color: var(--grey);
     border-radius: 5px;
     box-shadow: var(--shadow-color);
@@ -108,6 +115,7 @@
 
     gap: 1em;
     padding-top: .5em;
+
 
     
     align-items: center;
@@ -166,11 +174,11 @@
 .cards {
     background-color: white;
     display: grid;
-    overflow: -moz-hidden-unscrollable;
+    overflow: hidden;
     gap: 16px;
     padding: 12px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1em 1fr 1fr 1fr;
+    grid-template-rows: 1em repeat(3,1fr);
 
     align-items: center;
     justify-content: center;
@@ -183,6 +191,7 @@
 
 .card {
     height: 100%;
+    max-height: 22vh;
     border-radius: 5px;
     border-style: solid;
     border-width: 4px;
@@ -190,7 +199,10 @@
     border-color: var(--green);
     box-shadow: var(--shadow-color);
     padding: 8px;
+    overflow: clip;
 }
+
+
 
 
 
